--- a/Mavenjava/pom.xml
+++ b/Mavenjava/pom.xml
@@ -71,6 +71,11 @@
 			<version>5.3.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.0.1-jre</version>
+		</dependency>
 
 
 	</dependencies>
